--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    Secret Page
-</body>
+  </head>
+  <body>
+    <p style="text-align:center; margin-top:40vh; font-size:40px">Secret Page</p>
+  </body>
 </html>
